# finaxe

./: .env.example  CACHING.md  CONTEXT_BUDGET.md  DAY2_LEARNING.md  DAY2_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  requirements.txt
app/: config.py
app/chains/: extraction.py  research.py  summarize.py
app/db/: financials.py  models.py
app/db/migrations/: 001_create_llm_calls.sql
app/extraction/: financial.py  validators.py
app/llm/: anthropic_provider.py  budget.py  cache.py  cost.py  factory.py  mock_provider.py  openai_provider.py  provider.py  ranker.py  schemas.py  tokenizer.py
app/prompts/: registry.py
app/routers/: admin.py
app/schemas/: financial.py
app/tests/: test_cost.py  test_factory.py  test_integration.py
buyside/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
buyside/.github/workflows/: ci.yml
buyside/docker/: README.md
buyside/src/buyside/: main.py
buyside/src/buyside/api/: router.py  schemas.py
buyside/src/buyside/api/endpoints/: __init__.py  health.py  items.py
buyside/src/buyside/config/: settings.py
buyside/src/buyside/db/: models.py  session.py
buyside/src/buyside/services/: items.py
buyside/tests/: conftest.py  test_health.py  test_items.py
migrations/: 003_financials.sql  004_add_prompt_version.sql
notes/: prompt-changelog.md
prompts/extraction/: v1.yaml
prompts/summarize/: v1.yaml
scripts/: test_budget.py  test_cache.py  test_day4.py  test_extraction.py
